add 2nd heading

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- This site is optimized with the Yoast SEO plugin v21.0 - https://yoast.com/wordpress/plugins/seo/ -->
     <title>Home - High Class Mobile Detailing Inc.</title>
     <h1>add new heading</h1>
+    <h1>add new heading22</h1>
     <meta name="description"
         content="Leave your car shining without leaving home! Automotive detailing in Massachusetts. Schedule a professional cleaning now and save time and money." />
     <link rel="canonical" href="https://highclassmobiledetail.com/" />
