add heading to the clone website
I Just add heading check it

Co-Authored-By: Taher Fakhruddin Mukadam <mukadam.taher@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 
 <head>
+    <h1>add heading 1</h1>
     <meta charset="UTF-8">
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
     <!-- This site is optimized with the Yoast SEO plugin v21.0 - https://yoast.com/wordpress/plugins/seo/ -->
